Fixed grid rendering and changed scrollbar style.

--- a/less/style.less
+++ b/less/style.less
@@ -88,3 +88,15 @@ canvas {
 i.medium.large.icon, i.medium.large.icons {
     font-size: 1.25em;
 }
+
+::-webkit-scrollbar {
+    width: 4px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.03);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.075);
+}
